// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components > Analysis > Regional should handle rendering comparison 1`] = `
<div>
  <Group
    label="Compare to"
  >
    <Select
      arrowRenderer={[Function]}
      autosize={true}
      backspaceRemoves={true}
      backspaceToRemoveMessage="Press backspace to remove {label}"
      clearAllText="Clear all"
      clearRenderer={[Function]}
      clearValueText="Clear value"
      clearable={true}
      closeOnSelect={true}
      deleteRemoves={true}
      delimiter=","
      disabled={false}
      escapeClearsValue={true}
      filterOptions={[Function]}
      ignoreAccents={true}
      ignoreCase={true}
      inputProps={Object {}}
      isLoading={false}
      joinValues={false}
      labelKey="label"
      matchPos="any"
      matchProp="any"
      menuBuffer={0}
      menuRenderer={[Function]}
      multi={false}
      noResultsText="No results found"
      onBlurResetsInput={true}
      onChange={[Function]}
      onCloseResetsInput={true}
      onSelectResetsInput={true}
      openOnClick={true}
      optionComponent={[Function]}
      options={
        Array [
          Object {
            "label": "ANALYSIS 2",
            "value": "efgh",
          },
        ]
      }
      pageSize={5}
      placeholder="Select..."
      removeSelected={true}
      required={false}
      rtl={false}
      scrollMenuIntoView={true}
      searchable={true}
      simpleValue={false}
      tabSelectsValue={true}
      trimFilter={true}
      value="efgh"
      valueComponent={[Function]}
      valueKey="value"
    />
  </Group>
  <div>
    <ProfileRequestDisplay
      _id="efgh"
      accessGroup="accessGroupName"
      accessModes="WALK"
      bikeSafe={1}
      bikeSlope={1}
      bikeSpeed={4.166666666666667}
      bikeTime={1}
      bounds={
        Object {
          "east": -76,
          "north": 39,
          "south": 38,
          "west": -77,
        }
      }
      bundleId="1"
      complete={true}
      createdAt="2017-11-08T12:30:50.133Z"
      createdBy="person@gmail.com"
      cutoffMinutes={60}
      date="2016-01-16"
      defaultExpanded={true}
      deleted={false}
      directModes="WALK"
      egressModes="WALK"
      fromLat={12}
      fromLon={34}
      fromTime={25200}
      grid="Jobs_total"
      height={300}
      maxBikeTime={20}
      maxRides={4}
      maxTripDurationMinutes={60}
      maxWalkTime={20}
      monteCarloDraws={200}
      name="Profile Request Test"
      nonce="12345"
      north={20024}
      projectId="1"
      reachabilityThreshold={0}
      regionId="1"
      request={
        Object {
          "accessModes": "WALK",
          "bikeSafe": 1,
          "bikeSlope": 1,
          "bikeSpeed": 4.166666666666667,
          "bikeTime": 1,
          "bounds": Object {
            "east": -76,
            "north": 39,
            "south": 38,
            "west": -77,
          },
          "bundleId": "1",
          "date": "2016-01-16",
          "defaultExpanded": true,
          "directModes": "WALK",
          "egressModes": "WALK",
          "fromLat": 12,
          "fromLon": 34,
          "fromTime": 25200,
          "maxBikeTime": 20,
          "maxRides": 4,
          "maxTripDurationMinutes": 60,
          "maxWalkTime": 20,
          "monteCarloDraws": 200,
          "name": "Profile Request Test",
          "projectId": "1",
          "reachabilityThreshold": 0,
          "regionId": "1",
          "toTime": 32400,
          "transitModes": "BUS,TRAM,RAIL,SUBWAY",
          "travelTimePercentile": 50,
          "variantIndex": 0,
          "walkSpeed": 1.3888888888888888,
          "workerVersion": "v4.0.0",
        }
      }
      status="DONE"
      toTime={32400}
      transitModes="BUS,TRAM,RAIL,SUBWAY"
      travelTimePercentile={50}
      updatedAt="2017-11-08T12:31:19.602Z"
      updatedBy="person@gmail.com"
      variant={1}
      variantIndex={0}
      walkSpeed={1.3888888888888888}
      west={20015}
      width={300}
      workerVersion="v4.0.0"
      zoom={9}
    />
  </div>
  <p>
    Total jobs within 60 minutes (average instantaneous accessibility)
  </p>
  <p>
    compared with Total jobs within 60 minutes (percentile 42)
  </p>
  <Legend
    breaks={
      Array [
        100,
        500,
        1000,
        2000,
      ]
    }
    colors={
      Array [
        "rgba(215, 25, 28, 0.42)",
        "rgba(252, 174, 97, 0.42)",
        "rgba(255, 255, 191, 0.42)",
        "rgba(171, 217, 233, 0.42)",
        "rgba(44, 123, 182, 0.42)",
      ]
    }
    min={0}
  />
  <div>
    <Group
      label="Aggregate results to"
    >
      <Select
        arrowRenderer={[Function]}
        autosize={true}
        backspaceRemoves={true}
        backspaceToRemoveMessage="Press backspace to remove {label}"
        clearAllText="Clear all"
        clearRenderer={[Function]}
        clearValueText="Clear value"
        clearable={true}
        closeOnSelect={true}
        deleteRemoves={true}
        delimiter=","
        disabled={false}
        escapeClearsValue={true}
        filterOptions={[Function]}
        ignoreAccents={true}
        ignoreCase={true}
        inputProps={Object {}}
        isLoading={false}
        joinValues={false}
        labelKey="label"
        matchPos="any"
        matchProp="any"
        menuBuffer={0}
        menuRenderer={[Function]}
        multi={false}
        name="aggregateTo"
        noResultsText="No results found"
        onBlurResetsInput={true}
        onChange={[Function]}
        onCloseResetsInput={true}
        onSelectResetsInput={true}
        openOnClick={true}
        optionComponent={[Function]}
        options={
          Array [
            Object {
              "label": "Upload new aggregation area",
              "value": "new-aggregation-area",
            },
          ]
        }
        pageSize={5}
        placeholder="Select..."
        removeSelected={true}
        required={false}
        rtl={false}
        scrollMenuIntoView={true}
        searchable={true}
        simpleValue={false}
        tabSelectsValue={true}
        trimFilter={true}
        valueComponent={[Function]}
        valueKey="value"
      />
    </Group>
  </div>
  <Group
    label="Export to GIS"
  >
    <Button
      block={true}
      onClick={[Function]}
      style="info"
    >
      Download ANALYSIS 1
    </Button>
    <Button
      block={true}
      onClick={[Function]}
      style="info"
    >
      Download ANALYSIS 2
    </Button>
  </Group>
</div>
`;

exports[`Components > Analysis > Regional should render correctly 1`] = `
<div>
  <Group
    label="Compare to"
  >
    <Select
      arrowRenderer={[Function]}
      autosize={true}
      backspaceRemoves={true}
      backspaceToRemoveMessage="Press backspace to remove {label}"
      clearAllText="Clear all"
      clearRenderer={[Function]}
      clearValueText="Clear value"
      clearable={true}
      closeOnSelect={true}
      deleteRemoves={true}
      delimiter=","
      disabled={false}
      escapeClearsValue={true}
      filterOptions={[Function]}
      ignoreAccents={true}
      ignoreCase={true}
      inputProps={Object {}}
      isLoading={false}
      joinValues={false}
      labelKey="label"
      matchPos="any"
      matchProp="any"
      menuBuffer={0}
      menuRenderer={[Function]}
      multi={false}
      noResultsText="No results found"
      onBlurResetsInput={true}
      onChange={[Function]}
      onCloseResetsInput={true}
      onSelectResetsInput={true}
      openOnClick={true}
      optionComponent={[Function]}
      options={
        Array [
          Object {
            "label": "ANALYSIS 2",
            "value": "efgh",
          },
        ]
      }
      pageSize={5}
      placeholder="Select..."
      removeSelected={true}
      required={false}
      rtl={false}
      scrollMenuIntoView={true}
      searchable={true}
      simpleValue={false}
      tabSelectsValue={true}
      trimFilter={true}
      value={null}
      valueComponent={[Function]}
      valueKey="value"
    />
  </Group>
  <p>
    Total jobs within 60 minutes (average instantaneous accessibility)
  </p>
  <Legend
    breaks={
      Array [
        100,
        500,
        1000,
        2000,
      ]
    }
    colors={
      Array [
        "rgba(241, 237, 246, 0.42)",
        "rgba(188, 200, 224, 0.42)",
        "rgba(116, 169, 207, 0.42)",
        "rgba(43, 140, 190, 0.42)",
        "rgba(4, 90, 142, 0.42)",
      ]
    }
    min={0}
  />
  <div>
    <Group
      label="Aggregate results to"
    >
      <Select
        arrowRenderer={[Function]}
        autosize={true}
        backspaceRemoves={true}
        backspaceToRemoveMessage="Press backspace to remove {label}"
        clearAllText="Clear all"
        clearRenderer={[Function]}
        clearValueText="Clear value"
        clearable={true}
        closeOnSelect={true}
        deleteRemoves={true}
        delimiter=","
        disabled={false}
        escapeClearsValue={true}
        filterOptions={[Function]}
        ignoreAccents={true}
        ignoreCase={true}
        inputProps={Object {}}
        isLoading={false}
        joinValues={false}
        labelKey="label"
        matchPos="any"
        matchProp="any"
        menuBuffer={0}
        menuRenderer={[Function]}
        multi={false}
        name="aggregateTo"
        noResultsText="No results found"
        onBlurResetsInput={true}
        onChange={[Function]}
        onCloseResetsInput={true}
        onSelectResetsInput={true}
        openOnClick={true}
        optionComponent={[Function]}
        options={
          Array [
            Object {
              "label": "Upload new aggregation area",
              "value": "new-aggregation-area",
            },
          ]
        }
        pageSize={5}
        placeholder="Select..."
        removeSelected={true}
        required={false}
        rtl={false}
        scrollMenuIntoView={true}
        searchable={true}
        simpleValue={false}
        tabSelectsValue={true}
        trimFilter={true}
        valueComponent={[Function]}
        valueKey="value"
      />
    </Group>
  </div>
  <Group
    label="Export to GIS"
  >
    <Button
      block={true}
      onClick={[Function]}
      style="info"
    >
      Download ANALYSIS 1
    </Button>
  </Group>
</div>
`;
